fix alignment of toggle button to right side

--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -66,8 +66,8 @@
     }
 
     &__toggler {
-      // position: relative;
-      // right: -1rem;
+      position: relative;
+      right: -1rem;
       display: block;
       width: 4.4rem;
       height: 4.4rem;
